La til slide om tools

--- a/index.html
+++ b/index.html
@@ -234,6 +234,25 @@ new DownloadTask().execute(url1, url2, url3);
 - Hvordan den startes
 - Alle Activities (MÅ være listet her, ellers krasjer det)
 - Alle permissions (MÅ være listet her, ellers krasjer det)
+
+---
+
+# Tools of the trade
+
+Android SDK + Eclipse + ADT Plugin
+
+-ELLER-
+
+Android Studio
+
+???
+
+- Vi bruker førstkommende nå
+- Android Studio bygger på IntelliJ
+- MYE bedre GUI-builder
+- Gå over til Android Studio?
+	- Burde ikke være så mye styr
+
 	</textarea>
 	<script src="http://gnab.github.io/remark/downloads/remark-0.5.4.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
