--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ background-image: url('http://developer.android.com/images/brand/Android_Robot_2
 - Noen ting litt spesielt. Feks Serializable DRITTREGT
 - Android-prosjekt likt et standard Java-prosjekt (src, test osv)
 	- men pluss litt til
+	- Skal se på et prosjekt etterpå
 
 ---
 
